Fix (finally) the content width issue on mobile

--- a/app/javascript/css/baseline.css
+++ b/app/javascript/css/baseline.css
@@ -91,6 +91,7 @@ a {
 p {
   font-family: var(--sans-serif);
   color: var(--joy-text);
+  word-wrap: break-word;
 }
 
 b,
